--- a/index.html
+++ b/index.html
@@ -26,28 +26,29 @@
         txt.value = localStorage.getItem('text')
         document.addEventListener('keydown', e => {
             console.log(e.key)
-            if (e.key == '+') {
+            if(e.key != 'Backspace') return
+            if (txt.value[txt.selectionStart-1] == '+') {
                 e.preventDefault()
                 let oldCursorPos = txt.selectionStart
-                let output = txt.value.substring(0, oldCursorPos)
+                let output = txt.value.substring(0, oldCursorPos-1)
                 output += '⤷'
                 output += txt.value.substring(txt.selectionStart, txt.value.length)
                 txt.value = output
                 txt.selectionStart = oldCursorPos
                 txt.selectionEnd = oldCursorPos
-            } else if (e.key == '_') {
+            } else if (txt.value[txt.selectionStart-1] == '_') {
                 e.preventDefault()
                 let oldCursorPos = txt.selectionStart
-                let output = txt.value.substring(0, oldCursorPos)
+                let output = txt.value.substring(0, oldCursorPos-1)
                 output += '\t'
                 output += txt.value.substring(txt.selectionStart, txt.value.length)
                 txt.value = output
                 txt.selectionStart = oldCursorPos
                 txt.selectionEnd = oldCursorPos
-            } else if (e.key == '#' && (txt.selectionStart == 0 || txt.value[txt.selectionStart-1] == '\n')) {
+            } else if (txt.value[txt.selectionStart-1] == '#') {
                 e.preventDefault()
                 let oldCursorPos = txt.selectionStart
-                txt.value = txt.value.substring(0, oldCursorPos) + txt.value.substring(oldCursorPos, txt.value.indexOf('\n')).replace (/[A-Za-z]/g, translate) + txt.value.substring(txt.value.indexOf('\n'), txt.value.length)
+                txt.value = txt.value.substring(0, oldCursorPos-1) + txt.value.substring(oldCursorPos, txt.value.indexOf('\n')).replace (/[A-Za-z]/g, translate) + txt.value.substring(txt.value.indexOf('\n'), txt.value.length)
                 txt.selectionStart = oldCursorPos
                 txt.selectionEnd = oldCursorPos
             }
